--- a/assignment1/assets/css/style.css
+++ b/assignment1/assets/css/style.css
@@ -1,11 +1,15 @@
 * {
   box-sizing: border-box;
+  margin: 0;
 }
 
 body {
 	background: #efeee7;
+	background: url("../images/diamond_upholstery.png");
 	font: Helvetica, Arial, 'Helvetica Neue', sans-serif;
 	color: #777; 
+	height:100%;
+
 }
 
 li {
@@ -19,7 +23,7 @@ li {
 }
 
 input{
-	padding: 5px;
+	padding: 5px;<div<
 }
 
 h2{
@@ -27,17 +31,22 @@ h2{
 }
 p{
 	line-height: 1.2em;
+	color: #777;
 }
 
-footer {
-    left: 0;
-    bottom: 0;
-    height: 20px;
-    width: 100%;
+footer{
+	background: #666;
+	color: #fff;
+	padding: 30px 0;
+	clear: both;
+	border-top: 8px solid #4aaaa5;
+	color: #ccc;
+	font-size: 12px;
+	text-align: center;
 }
 
 #wrapper{
-	width: 960px;
+	width: 100%;
 	height: 57px;
 	margin: 0 auto;
 	background: #fff;
@@ -46,8 +55,14 @@ footer {
 }
 
 .bigone{
-	margin: 0px 193px;
-	min-width: 1039px;
+	margin: 0 0 30px;
+	color: #fff;
+	overflow: auto;
+	border-bottom: 2px solid #ccc;
+	position: fixed;
+	width: 100%;
+	min-height: 100%;
+	height:100%;
 }
 
 .myNameHeader{
@@ -73,6 +88,17 @@ footer {
 	width: 650px;
 }
 
+.sidebar {
+	background: #fff;
+	padding: 30px;
+	width: 100%;
+	max-width: 270px;
+	float: right;
+	border: 1px solid #ddd;
+	margin-bottom: 20px;
+	margin-right: 40px;
+	}
+
 #bioImage {
 	float: left;
 	margin: 10px;
@@ -94,9 +120,22 @@ footer {
 	margin-left: 10px;
 
 }
+.footer{
+	width: 100%;
+	max-width: 960px
+	margin: 0 auto;
+	clear: both;
+}
+
 .mainbio{
-	border: solid 1px;
-	width: 610px;
+	background: #fff;
+	padding: 30px;
+	margin: 0 0 40px 0;
+	width: 100%;
+	max-width: 650px;
+	float: left;
+	border: 1px solid #ddd;
+}
 }
 .contact{
 	border: solid 1px;
@@ -122,12 +161,8 @@ footer {
 }
 .connect{
 	list-style-type: none;
-	border: solid 1px;
-	background: #fff;
-	width: 270px;
-	float:right;
-	margin-right: 40px;
-	padding: 15px;
+
+	
 }
 .floatLeft{
 	float: left;
@@ -135,19 +170,8 @@ footer {
 }
 .floatLeftmargin{
 	margin-left: 10px;
-}
-.footer{
-	clear: both;
-	background: gray;
-	color: #666666;
-	padding: 20px;
-	text-align: center;
-	border-top: 5px solid #4aaaa5;
-	margin-top: 20px;
-	color: #fff;
-	font-size: 10px;
-}
 
+}
 .logo{
 	width: 60px;
 	height: 60px;
@@ -194,17 +218,31 @@ footer {
 	height: 220px;
 }
 
-@media screen and (max-width: 980px) {
+
+
+@media screen and (max-width: 991px) {
+	.sidebar{
+		float: left;
+		margin-left: 40px;
+	}
 
 }
 @media screen and (max-width: 768px) {
+	.sidebar{
+		float: left;
+		margin-left: 40px;
+	}
 
 }
 @media screen and (max-width: 640px) {
-	.wrapper{
+	head{
 			position: static;
 	}
 
+	.sidebar{
+		float: left;
+		margin-left: 40px;
+	}
 }
 
 		
